2004-06-30  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_doppler.c: Permit a DOPPLER_FACTOR of 0 as
        per the spec.  Noticed by Jason Daly <jdaly@ist.ucf.edu>

2004-06-30  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/al_filter.c: Doppler fixes based on a patch
        from Jason Daly <jdaly@ist.ucf.edu> with an additional fix.

2004-06-30  Adam D. Moss  <adam@gimp.org>

        * openal/linux/test/testdoppler.c: A more realistic and helpful
        doppler test -- move the source towards, through, and away from
        the listener, while accelerating constantly.

2004-06-30  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Nonsensical partial revertion to
        work around problem experienced by Prakash K. Cheemplavam.  My
        respect for ALSA has slowly eroded close to the negative by now.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Preferentially load symbol
        versions which are known to be good, before falling back to generic
        unversioned symbols.  This avoids picking up random crappy interface
        versions in the dlsym roulette.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/configure.in
        * openal/linux/src/arch/arts/arts.c
        * openal/linux/src/arch/esd/esd.c: From Marco Ziech <mmz@gmx.net>:
        Add option to load arts and esd libraries at run-time.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c
        * openal/linux/src/alc/alc_context.c: If _alcDeviceSet() fails then
        return straight after setting the error code, instead of proceeding
        to call _alSetMixer().  This stops AL going into a tight loop if
        a driver's set_write_???() fails.

2004-06-25  Adam D. Moss  <adam@gimp.org>

        * openal/linux/src/arch/alsa/alsa.c: Fix from Marco Ziech <mmz@gmx.net>
        for more correct dlsym error handling.
